--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -1,7 +1,5 @@
 name: Python Package using Conda
 
-on: [push]
-
 jobs:
   build-linux:
     runs-on: ubuntu-latest
@@ -15,7 +13,7 @@ jobs:
       with:
         python-version: '3.10'
     - name: Add conda to system path
-      run: |
+      run: python3 main.py
         # $CONDA is an environment variable pointing to the root of the miniconda directory
         echo $CONDA/bin >> $GITHUB_PATH
     - name: Install dependencies
